--- a/src/static/test.html
+++ b/src/static/test.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title></title>
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-F7cPHYSdE3FzBKvdxDKyFow9Y28Yq7KGHQOKpOI+rwc8s6jJnp///mpEJAib2EM6" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.14.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.7"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@0.2.2"></script>
   <style>
 
@@ -17,8 +17,8 @@
     <div class="row">
       <div class="col">
         <input class="file-input" type="file" accept="image/*" capture="environment">
-        <img class="photo-preview" />
-        <pre><code class="results code"></code></pre>
+        <img src="" class="photo-preview" alt="File will be displayed here" />
+        <div class="results"></div>
       </div>
     </div>
   </div>
